# REST-API

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  test_api.sh
.github/: copilot-instructions.md
include/: api_routes.h  auth_service.h  database.h
src/: api_routes.cpp  auth_service.cpp  database.cpp  main.cpp
